on attacking player 2 task

--- a/views/play.erb
+++ b/views/play.erb
@@ -1,1 +1,2 @@
-<div> <%= "player 1's name is:#{@player_1},  player 2's name is:#{@player_2}" %> </div>
+<%= "player 1's name is:#{@player_1},  player 2's name is:#{@player_2}" %>
+<%= "#{@player_2}'s health is" %>: 60HP
