Completed Attacking Player 2

--- a/views/play.erb
+++ b/views/play.erb
@@ -1,2 +1,6 @@
 <%= "player 1's name is:#{@player_1},  player 2's name is:#{@player_2}" %>
-<%= "#{@player_2}'s health is" %>: 60HP
+<%= "#{@player_2}'s health is" %>:60HP
+
+<form action="/attack">
+  <input type="submit" value="Attack">
+</form>
