starting player damage

--- a/views/attack.erb
+++ b/views/attack.erb
@@ -1,1 +1,3 @@
-<%= "#{@player_1} attacked #{@player_2}" %>
+<%= "#{@player_2}'s health is" %>:60HP
+<%= "#{@player_1} attacked #{@player_2} " %>
+<%= "#{@player_2}'s health is" %>:50HP
