--- a/views/attack.erb
+++ b/views/attack.erb
@@ -1,3 +1,3 @@
-<%= "#{@player_2}'s health is" %>:60HP
-<%= "#{@player_1} attacked #{@player_2} " %>
-<%= "#{@player_2}'s health is" %>:50HP
+<%= @player_1.name %> vs. <%= @player_2.name %>
+
+<%= @player_2.name "health is"%>: <%= @player_2.hit_points %>HP
